--- a/sample/BlazorApp.Mac/packages.config
+++ b/sample/BlazorApp.Mac/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNetCore.Authorization" version="3.1.2" targetFramework="xamarinmac20" />
-  <package id="Microsoft.AspNetCore.Blazor" version="3.2.0-preview1.20073.1" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Blazor.HttpClient" version="3.2.0-preview2.20160.5" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components.Analyzers" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components.Forms" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Components.Web" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.AspNetCore.Components.WebAssembly" version="3.2.0-preview2.20160.5" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="xamarinmac20" />
@@ -25,7 +25,6 @@
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.2" targetFramework="xamarinmac20" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.2" targetFramework="xamarinmac20" />
@@ -35,8 +34,8 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.Extensions.WebEncoders" version="3.1.2" targetFramework="xamarinmac20" />
   <package id="Microsoft.JSInterop" version="3.1.2" targetFramework="xamarinmac20" />
+  <package id="Microsoft.JSInterop.WebAssembly" version="3.2.0-preview2.20160.5" targetFramework="xamarinmac20" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.8" targetFramework="xamarinmac20" />
-  <package id="Mono.WebAssembly.Interop" version="3.2.0-preview1.20073.1" targetFramework="xamarinmac20" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="xamarinmac20" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="xamarinmac20" developmentDependency="true" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinmac20" />
