Start of documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -411,3 +411,7 @@ build64/
 
 /sample/BlazorApp.Android/Assets/wwwroot.zip
 /sample/BlazorApp.Wpf/*.xml
+
+# site documentation.
+_site/
+.DS_Store
