--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -1,4 +1,4 @@
-name: .NET Core Windows
+name: .NET Core
 
 on:
   push:
@@ -16,11 +16,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.102
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-    - name: Run unit tests
-      run: dotnet test
-    - name: Pack nuget package
-      run: dotnet pack --configuration Release
-    - name: Push nuget package
-      run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Yarn
+      uses: actions/setup-node@v1
+      working-directory: ./src/BlazorWebView.JS/upstream/aspnetcore/web.js
+      run: yarn
