--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -27,3 +27,9 @@ jobs:
     - name: Build BlazorWebView
       working-directory: ./src/BlazorWebView/
       run: dotnet build --configuration Release
+    - name: Pach BlazorWebView
+      working-directory: ./src/BlazorWebView/
+      run: dotnet pack --configuration Release
+    - name: Push BlazorWebView nuget package
+      working-directory: ./src/BlazorWebView/
+      run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
