--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -27,21 +27,30 @@ jobs:
     - name: Build BlazorWebView
       working-directory: ./src/BlazorWebView/
       run: dotnet build --configuration Release
-    - name: Pach BlazorWebView
+    - name: Pack BlazorWebView
       working-directory: ./src/BlazorWebView/
       run: dotnet pack --configuration Release
     - name: Push BlazorWebView nuget package
       working-directory: ./src/BlazorWebView/
       run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-    - name: configure32
-      working-directory: ./src/BlazorWebView/BlazorWebView.Native
+    - name: BlazorWebView.Native configure32
+      working-directory: ./src/BlazorWebView.Native/
       run: mkdir build32 && cd build32 && cmake -G "Visual Studio 16 2019" -A Win32 ..
-    - name: build32
-      working-directory: ./src/BlazorWebView/BlazorWebView.Native
+    - name: BlazorWebView.Native build32
+      working-directory: ./src/BlazorWebView.Native
       run: cmake --build build32 --config Release
-    - name: configure64
-      working-directory: ./src/BlazorWebView/BlazorWebView.Native
+    - name: BlazorWebView.Native configure64
+      working-directory: ./src/BlazorWebView.Native
       run: mkdir build64 && cd build64 && cmake -G "Visual Studio 16 2019" -A x64 ..
-    - name: build32
-      working-directory: ./src/BlazorWebView/BlazorWebView.Native
+    - name: BlazorWebView.Native build32
+      working-directory: ./src/BlazorWebView.Native
       run: cmake --build build64 --config Release
+    - name: Build BlazorWebView.Wpf
+      working-directory: ./src/BlazorWebView.Wpf/
+      run: dotnet build --configuration Release
+    - name: Pack BlazorWebView.Wpf
+      working-directory: ./src/BlazorWebView.Wpf/
+      run: dotnet pack --configuration Release
+    - name: Push BlazorWebView.Wpf nuget package
+      working-directory: ./src/BlazorWebView.Wpf/
+      run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
