--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -39,7 +39,8 @@ jobs:
       working-directory: ./src/BlazorWebView.Native/
       run: mkdir build32 && cd build32 && cmake -G "Visual Studio 16 2019" -A Win32 ..
     - name: Nuget restore
-      run: nuget restore src\BlazorWebView.Native\build32\BlazorWebViewNative.sln -PackagesDirectory .\packages\
+      working-directory: ./
+      run: nuget restore .\src\BlazorWebView.Native\build32\BlazorWebViewNative.sln -PackagesDirectory .\packages\
     - name: BlazorWebView.Native build32
       working-directory: ./src/BlazorWebView.Native
       run: cmake --build build32 --config Release
