--- a/.github/workflows/coreosx.yml
+++ b/.github/workflows/coreosx.yml
@@ -44,3 +44,12 @@ jobs:
       run: |
         dotnet restore
         msbuild BlazorWebView.iOS.csproj /t:Build /p:Configuration=Release
+    - name: Push BlazorWebView.Android nuget package
+        working-directory: ./src/BlazorWebView.Android/
+        run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Push BlazorWebView.Mac nuget package
+        working-directory: ./src/BlazorWebView.Mac/
+        run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    - name: Push BlazorWebView.iOS nuget package
+        working-directory: ./src/BlazorWebView.iOS/
+        run: dotnet nuget push **/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
