Documentation update. Netcore update.

--- a/docs/pages/toc.yml
+++ b/docs/pages/toc.yml
@@ -2,3 +2,15 @@
   items:
     - name: Summary
       href: index.md
+- name: Tutorial
+  items:
+    - name: Preparations
+      href: prepare.md
+    - name: Android
+      href: androidtutorial.md
+    - name: iOS
+      href: iostutorial.md
+    - name: Mac
+      href: mactutorial.md
+    - name: WPF
+      href: wpftutorial.md
